# aidkits

./: .gitignore  README.ipynb  README.md  pyproject.toml
.github/workflows/: python-publish.yaml
aidkit/: documentation_tool.py  main.py  parse.py
aidkit/storage/: opensearch_retriever.py
crawler/: __init__.py  documentation_tool.py  main.py  opensearch_retriever.py  parse.py
crawler/storage/: opensearch_retriever.py
crowler/: main.py
examples/: opensearch_write.py  parse_gitrepo.py
tests/: test_json_splitter.py  test_models.py  test_parse.py  test_storage.py
